--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@
   --brand-primary: #2958FF;
   --brand-primary-darkness: #1231A5;
   --brand-secondary: #FF3F00;
+  --brand-yellow: #FFC226;
 
   // Neutral
   --color-neutral-white: #FFF;
