--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -3,9 +3,17 @@
   align-items: center;
 }
 
+.brand {
+  grid-column: 1 / span 4;
+}
+
 .header {
   width: 100%;
   height: 88px;
 }
 
-.brand {}
+@media screen and (min-width: 1440px) {
+  .header {
+    height: 96px;
+  }
+}
