--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 img {
@@ -12,6 +14,90 @@ img {
 }
 
 html, body {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+html {
+  overflow: auto;
+}
+
+body {
   background-color: var(--brand-primary);
   color: var(--color-neutral-white);
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+}
+
+.grid-container {
+  display: grid;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
+  grid-template-rows: 1fr;
+}
+
+.grid-default {
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-gap: 16px;
+}
+
+.defaultLink {
+  text-decoration: none;
+  color: var(--brand-yellow);
+  display: inline-block;
+  position: relative;
+}
+
+.defaultLink::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--brand-yellow);
+  transform-origin: 0 25%;
+  transition: 0.4s ease-in-out;
+}
+
+.defaultLink:hover::after {
+  transform: scaleX(0.1)
+}
+
+@media screen and (min-width: 748px) {
+  .grid-container {
+    padding: 0 48px;
+  }
+
+  .grid-default {
+    grid-template-columns: repeat(8, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .grid-container {
+    padding: 0 48px;
+  }
+
+  .grid-default {
+    grid-template-columns: repeat(12, 1fr);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .grid-container {
+    padding: 0;
+    max-width: 1216px;
+  }
 }
