--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,4 +11,7 @@
   --font-primary: "Space Grotesk", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --font-secondary: "Monument Extended", sans-serif;
+
+  // Transition
+  --transition-default: 0.24s 0s ease-in-out;
 }
