--- a/styles/components/HeaderNav.module.scss
+++ b/styles/components/HeaderNav.module.scss
@@ -6,7 +6,7 @@
   height: 100%;
   padding: 0 24px 40px;
   background-color: var(--color-brand-primary);
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-between;
 
@@ -20,11 +20,17 @@
         color: var(--color-neutral-white);
         font-size: 24px;
         line-height: 160%;
+        display: block;
         font-family: var(--font-secondary);
         text-transform: lowercase;
         font-weight: 900;
         padding: 24px 0;
         display: flex;
+        transition: var(--transition-default);
+
+        &:hover {
+          color: var(--color-brand-tertiary);
+        }
       }
 
       &:first-child a {
@@ -33,27 +39,6 @@
       &:last-child a {
         padding-bottom: 0;
       }
-    }
-  }
-}
-
-.email {
-  a {
-    color: var(--color-brand-tertiary);
-    font-size: 20px;
-    line-height: 160%;
-    font-weight: 500;
-    display: inline-flex;
-    position: relative;
-
-    &::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: var(--color-brand-tertiary);
     }
   }
 }
