--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,7 +2,9 @@
   // COLORS
   // Brand
   --color-brand-primary: #2958FF;
+  --color-brand-secondary: #FF3F00;
   --color-brand-tertiary: #FFC226;
+  --color-brand-dark: #252630;
 
   // Neutral
   --color-neutral-white: #FFFFFF;
@@ -10,7 +12,7 @@
   // Typography
   --font-primary: "Space Grotesk", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  --font-secondary: "Monument Extended", sans-serif;
+  --font-secondary: "Epilogue", sans-serif;
 
   // Transition
   --transition-default: 0.24s 0s ease-in-out;
