--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,6 +13,14 @@ body {
   padding: 0;
   margin: 0;
   font-family: var(--font-primary);
+  color: var(--color-brand-dark);
+  font-size: 18x;
+  line-height: 160%;
+  font-weight: 400;
+
+  @include for-tablet-up() {
+    font-size: 20px;
+  }
 }
 
 a {
@@ -18,6 +28,6 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+h1, h2, h3 {
+  font-family: var(--font-secondary);
 }
