--- a/styles/components/ButtonLink.module.scss
+++ b/styles/components/ButtonLink.module.scss
@@ -4,15 +4,31 @@
   font-weight: 500;
   display: inline-flex;
   position: relative;
+  transition: var(--transition-default);
 
-  &::before {
+  &::before, &::after {
     content: '';
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
     height: 2px;
+    transition: var(--transition-default);
+  }
+
+  &::before {
     background-color: var(--color-brand-tertiary);
+    width: 100%;
+  }
+
+  &::after {
+    width: 0;
+    background-color: var(--color-brand-secondary);
+  }
+
+  &:hover {
+    &::after {
+      width: 100%;
+    }
   }
 
   &Small {
@@ -29,5 +45,10 @@
     &::before {
       background-color: var(--color-brand-primary);
     }
+
+    &:hover {
+      color: var(--color-brand-secondary);
+    }
   }
+
 }
