--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -1,14 +1,25 @@
+@import '../mixins';
+
 .header {
   background-color: #F6F6F7;
   width: 100%;
   padding: 20px 0;
   min-height: 96px;
+
+  @include for-desktop-up() {
+    background-color: transparent;
+    padding: 32px 0;
+  }
 }
 
 .brand {
   grid-column: 1 / span 1;
   position: relative;
   z-index: 10;
+
+  @include for-desktop-up() {
+    width: 56px;
+  }
 }
 
 .navTrigger {
@@ -21,4 +32,13 @@
   justify-content: center;
   grid-column: 4 / 4;
   justify-self: end;
+
+  @include for-tablet-up() {
+    grid-column: 8 / 8;
+  }
+
+  @include for-desktop-up() {
+    display: none;
+  }
+
 }
