--- a/styles/components/HeaderNav.module.scss
+++ b/styles/components/HeaderNav.module.scss
@@ -1,3 +1,5 @@
+@import "../mixins";
+
 .navMenu {
   position: absolute;
   top: 0;
@@ -15,7 +17,6 @@
     margin-top: 168px;
 
     li {
-
       a {
         color: var(--color-neutral-white);
         font-size: 24px;
@@ -33,11 +34,76 @@
         }
       }
 
-      &:first-child a {
-        padding-top: 0;
+      // &:first-child a {
+      //   padding-top: 0;
+      // }
+
+      // &:last-child a {
+      //   padding-bottom: 0;
+      // }
+    }
+  }
+
+  @include for-desktop-up() {
+    display: flex;
+    align-items: center;
+    position: inherit;
+    padding: 0;
+    flex-direction: row;
+    background-color: initial;
+    width: initial;
+    height: initial;
+    grid-column: auto / 12;
+
+    .navMenuItems {
+      display: flex;
+      margin: 0;
+      margin-right: 24px;
+      position: relative;
+      padding-right: 8px;;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        width: 1px;
+        height: 26px;
+        background-color: rgba(36, 37, 44, 0.08);
       }
-      &:last-child a {
-        padding-bottom: 0;
+
+      li {
+        a {
+          font-size: 18px;
+          line-height: 26px;
+          font-weight: 500;
+          padding: 16px;
+          color: var(--color-brand-dark);
+          margin-right: 16px;
+          position: relative;
+
+          &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background-color: rgba(36, 37, 44, 0.16);
+            transition: var(--transition-default);
+          }
+
+          &:hover {
+            color: var(--color-brand-secondary);
+
+            &::before {
+              background-color: var(--color-brand-secondary);
+            }
+          }
+        }
       }
     }
   }
