--- a/styles/home/projectItem.module.scss
+++ b/styles/home/projectItem.module.scss
@@ -1,7 +1,8 @@
+@import '../mixins';
+
 .item {
   display: flex;
   align-items: center;
-  background-color: rgba(#fff, 0.04);
   border-bottom: 1px solid rgba(#fff, 0.08);
 
   &:not(:last-child) {
@@ -10,8 +11,21 @@
 }
 
 .container {
+  flex-basis: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.content {
+  flex-basis: 100%;
+}
+
+.link {
+  display: flex;
+  flex-basis: 100%;
+  align-items: center;
   padding-bottom: 64px;
-  flex-basis: 100%
 }
 
 .title {
@@ -45,10 +59,32 @@
 
   ul {
     list-style: none;
+    flex-direction: column;
 
 
     li {
      color: rgba(#fff, 0.64);
     }
+  }
+
+  @include for-tablet-up() {
+    ul {
+      flex-direction: row;
+    }
+  }
+
+  @include for-tablet-only() {
+    li {
+      font-size: 16px;
+      line-height: 24px;
+    }
+  }
+}
+
+.iconLink {
+  display: none;
+
+  @include for-desktop-up() {
+    display: block;
   }
 }
