--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,6 +8,7 @@
 
   // Neutral
   --color-neutral-white: #FFFFFF;
+  --color-neutral-black: #000000;
 
   // Typography
   --font-primary: "Space Grotesk", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
