start aboutMe description area

--- a/styles/components/ButtonLink.module.scss
+++ b/styles/components/ButtonLink.module.scss
@@ -68,4 +68,20 @@
     }
   }
 
+  &Red {
+    color: var(--color-brand-secondary);
+
+    &::before, &::after {
+      background-color: var(--color-brand-secondary);
+    }
+
+    &:hover {
+      color: var(--color-brand-tertiary);
+
+      &::before, &::after {
+        background-color: var(--color-brand-tertiary);
+      }
+    }
+  }
+
 }
