--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,7 +14,7 @@ body {
   margin: 0;
   font-family: var(--font-primary);
   color: var(--color-brand-dark);
-  font-size: 18x;
+  font-size: 18px;
   line-height: 160%;
   font-weight: 400;
 
