--- a/styles/home/aboutMe.module.scss
+++ b/styles/home/aboutMe.module.scss
@@ -1,11 +1,113 @@
+@import '../mixins';
+
 .aboutMeSection {
-  padding: 116px 0 116px;
+  padding: 116px 0;
 }
 
 .container {
   grid-column: 1 / span 12;
 }
 
-.heading span {
-  color: var(--color-brand-secondary);
+.heading {
+  margin-bottom: 32px;
+
+  span {
+    color: var(--color-brand-secondary);
+  }
+}
+
+.main {
+  margin-top: 32px;
+}
+
+.leftCol,
+.rightCol {
+  height: 100%;
+}
+
+.leftCol {
+  grid-area: 1 / 1 / auto / span 6;
+}
+
+.rightCol {
+  grid-area: 1 / 6 / auto / span 12;
+  display: flex;
+  align-items: center;
+}
+
+.photo {
+  width: 100%;
+  height: 100%;
+  position: relative;
+
+  @include for-desktop-up() {
+    width: 748px;
+    height: 954px;
+  }
+}
+
+.image {
+  position: relative;
+  height: 100%;
+
+  &::before {
+    content: '';
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000, 0.48);
+  }
+
+  > div {
+    width: 100%;
+    height: 100%;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.photoLabel {
+  display: flex;
+  flex-direction: column;
+  gap: 8px 0 ;
+  position: absolute;
+  z-index: 2;
+  bottom: 32px;
+  left: 32px;
+  max-width: 444px;
+  color: var(--color-neutral-white);
+
+  span {
+    font-size: 14px;
+    line-height: 130%;
+    font-weight: 500;
+    opacity: 0.72;
+  }
+}
+
+.description {
+  position: relative;
+  z-index: 3;
+  max-width: 550px;
+  margin-left: auto;
+  margin-right: 0;
+  padding-left: 42px;
+
+  p {
+    font-size: 28px;
+    line-height: 160%;
+    color: var(--color-neutral-white);
+    opacity: 0.88;
+
+    &:not(:last-child) {
+      margin-bottom: 40px;
+    }
+  }
 }
