--- a/styles/components/Container.module.scss
+++ b/styles/components/Container.module.scss
@@ -6,6 +6,10 @@
   max-width: 1216px;
   margin: 0 auto;
 
+  @include for-tablet-up() {
+    padding: 0 40px;
+  }
+
   @include for-desktop-up() {
     padding: 0 32px;
   }
