--- a/styles/home/aboutMe.module.scss
+++ b/styles/home/aboutMe.module.scss
@@ -1,7 +1,11 @@
 @import '../mixins';
 
 .aboutMeSection {
-  padding: 116px 0;
+  padding: 64px 0;
+
+  @include for-desktop-up() {
+    padding: 116px 0;
+  }
 }
 
 .container {
@@ -122,7 +126,7 @@
 .description {
   position: relative;
   z-index: 3;
-  padding: 48px 0;
+  padding: 48px 0 0;
 
   p {
     font-size: 18px;
