--- a/styles/home/workItem.module.scss
+++ b/styles/home/workItem.module.scss
@@ -3,6 +3,10 @@
   border: 1px solid rgba(#fff, 0.16);
   display: flex;
   flex-direction: column;
+
+  &:not(:last-child) {
+    border-bottom: none;
+  }
 }
 
 .heading {
