finish works section

--- a/styles/home/aboutMe.module.scss
+++ b/styles/home/aboutMe.module.scss
@@ -149,7 +149,7 @@
     max-width: 550px;
     margin-left: auto;
     margin-right: 0;
-    padding-left: 42px;
+    padding: 48px 0 48px 42px;
 
     p {
       font-size: 28px;
