--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -11,6 +11,10 @@
   @media only screen and (min-width: 768px) and (max-width: 1024px) { @content; }
 }
 
+@mixin for-phone-table-only {
+  @media only screen and (min-width: 0px) and (max-width: 1024px) { @content; }
+}
+
 @mixin for-tablet-up {
   @media only screen and (min-width: 768px) { @content; }
 }
