--- a/styles/home/projectItem.module.scss
+++ b/styles/home/projectItem.module.scss
@@ -88,7 +88,7 @@
   .iconLink {
     display: none;
 
-    @include for-tablet-up() {
+    @include for-desktop-up() {
       display: block;
       opacity: 0.16;
       transition: var(--transition-default);
