--- a/styles/home/workItem.module.scss
+++ b/styles/home/workItem.module.scss
@@ -1,11 +1,23 @@
+@import "../mixins";
+
 .item {
   padding: 32px;
   border: 1px solid rgba(#fff, 0.16);
   display: flex;
   flex-direction: column;
 
-  &:not(:last-child) {
-    border-bottom: none;
+  @include for-phone-table-only() {
+    &:not(:last-child) {
+      border-bottom: none;
+    }
+  }
+
+  @include for-desktop-up() {
+    border-bottom: 1px solid rgba(#fff, 0.16);
+
+    &:not(:last-child) {
+      border-right: none;
+    }
   }
 }
 
