add social links and credits area in footer

--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -1,5 +1,13 @@
 @import "../mixins";
 
+.section {
+  padding: 64px 0 0;
+
+  @include for-desktop-up() {
+    padding: 116px 0 0;
+  }
+}
+
 .grid {
   grid-template-rows: max-content 1fr;
 }
@@ -73,6 +81,68 @@
       height: 260px;
     }
   }
+}
+
+.socialList {
+  display: flex;
+  list-style: none;
+  gap: 0 16px
+}
+
+.socialItem {
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-brand-tertiary);
+  transition: var(--transition-default);
+
+  svg {
+    width: 32px;
+    height: 32px;
+
+    path {
+      fill: var(--color-neutral-black);
+      transition: var(--transition-default);
+    }
+  }
+
+  &:hover {
+    background-color: var(--color-brand-primary);
+
+    svg path {
+      fill: var(--color-neutral-white);
+    }
+  }
+}
+
+.credits {
+  margin-top: 96px;
+  padding: 20px 0;
+
+  @include for-desktop-up() {
+    margin-top: 116px;
+    padding: 12px 0 44px;
+  }
+
+  .brand {
+    svg {
+      width: 40px;
+      height: 40px;
+
+      path, rect {
+        fill: var(--color-neutral-white);
+      }
+    }
+  }
+}
+
+.madeWith {
+  justify-self: end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 @keyframes spin {
