--- a/styles/home/aboutMe.module.scss
+++ b/styles/home/aboutMe.module.scss
@@ -15,7 +15,7 @@
 .heading {
   margin-bottom: 32px;
 
-  span {
+  .title_highlight {
     color: var(--color-brand-secondary);
   }
 }
@@ -109,7 +109,7 @@
   max-width: calc(100% - 32px);
   color: var(--color-neutral-white);
 
-  span {
+  .photoText {
     font-size: 14px;
     line-height: 130%;
     font-weight: 500;
