--- a/styles/home/works.module.scss
+++ b/styles/home/works.module.scss
@@ -16,9 +16,10 @@
 
   margin-bottom: 48px;
 
-  h3 span {
+  .title_highlight {
     color: var(--color-brand-tertiary);
   }
+
 
   @include for-desktop-up() {
     margin-bottom: 64px;
