--- a/styles/home/works.module.scss
+++ b/styles/home/works.module.scss
@@ -8,19 +8,26 @@
   }
 }
 
-.heading, .items {
+.heading, .swiper {
   grid-column: 1 / span 8;
 }
 
 .heading {
-  margin-bottom: 48px;
+  margin-bottom: 24px;
 
   .title_highlight {
     color: var(--color-brand-tertiary);
   }
 
-  @include for-desktop-up() {
+  @include for-tablet-up() {
+    grid-column: 1 / span 8;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin-bottom: 64px;
+  }
+
+  @include for-desktop-up() {
     grid-column: 1 / span 12;
   }
 }
@@ -36,22 +43,66 @@
   width: 100%;
   height: 100%;
   overflow: visible !important;
+
+  @include for-desktop-up() {
+    grid-column: 1 / span 12;
+    display: flex;
+  }
 }
 
 .swipperSlide {
   border: 1px solid rgba(#fff, 0.16);
 
-  @include for-phone-table-only() {
+  @include for-tablet-up() {
     &:not(:last-child) {
-      border-bottom: none;
+      border-right: none;
+    }
+  }
+}
+
+.swiperNavigation {
+  display: flex;
+  gap: 0 8px;
+  margin-top: 56px;
+
+  @include for-tablet-up() {
+    margin-top: 0;
+  }
+}
+
+.swiperNavigationControl {
+  width: 56px;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-brand-tertiary);
+  cursor: pointer;
+  transition: var(--transition-default);
+
+  svg path {
+    transition: var(--transition-default);
+  }
+
+  &:not(.swiperNavigationDisabled ):hover {
+    background-color: var(--color-brand-secondary);
+
+    svg path {
+      fill: var(--color-neutral-white)
     }
   }
 
   @include for-desktop-up() {
-    border-bottom: 1px solid rgba(#fff, 0.16);
+    width: 48px;
+    height: 48px;
+  }
+}
 
-    &:not(:last-child) {
-      border-right: none;
-    }
+.swiperNavigationDisabled {
+  cursor: not-allowed;
+  background-color: rgba(#fff, 0.08);
+
+  svg path {
+    fill: rgba(#fff, 0.24);
   }
 }
