--- a/styles/home/works.module.scss
+++ b/styles/home/works.module.scss
@@ -50,6 +50,35 @@
   }
 }
 
+.swiperMask {
+  pointer-events: none;
+
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    width: 100px;
+    height: 100%;
+    pointer-events: none;
+  }
+
+  &::before {
+    left: 0;
+    background-image: linear-gradient(-270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
+  }
+
+  &::after {
+    right: 0;
+    background-image: linear-gradient(270deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+  }
+
+  @include for-desktop-up() {
+    width: 200px;
+  }
+
+}
+
 .swipperSlide {
   border: 1px solid rgba(#fff, 0.16);
 
