update LinkUnderscore componente styles

--- a/styles/components/LinkUnderscore.module.scss
+++ b/styles/components/LinkUnderscore.module.scss
@@ -27,6 +27,7 @@
   &::before {
     background-color: var(--color-brand-tertiary);
     width: 100%;
+    transition: background-color 0.24s 0.16s ease-in-out, width 0.24s 0.16s ease-in-out;
   }
 
   &::after {
@@ -36,17 +37,20 @@
     transform-origin: 50% 100%;
     transform: scale3d(1, 0, 1) translateX(-50%);
     background-color: var(--color-brand-secondary);
+    transition: transform 0.24s 0s ease-in-out, opacity 0.24s 0s ease-in-out;
   }
 
   &:hover {
     &::before {
       background-color: var(--color-brand-secondary);
       width: 104%;
+      transition: background 0.24s 0.16s ease-in-out, width var(--transition-default);
     }
 
     &::after {
       transform: scale3d(1, 1, 1) translateX(-50%);
-      opacity: 0.08;
+      opacity: 0.12;
+      transition-delay: 0.16s;
     }
   }
 
