correct text and styles

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,6 +6,9 @@
   --color-brand-tertiary: #FFC226;
   --color-brand-dark: #252630;
 
+  // Support
+  --color-support-primary: #8f42f2;
+
   // Neutral
   --color-neutral-white: #FFFFFF;
   --color-neutral-black: #000000;
