--- a/styles/home/aboutMe.module.scss
+++ b/styles/home/aboutMe.module.scss
@@ -16,7 +16,7 @@
   margin-bottom: 32px;
 
   .title_highlight {
-    color: var(--color-brand-secondary);
+    color: var(--color-support-primary);
   }
 }
 
