fix About me section title and remove GridColumn component

--- a/styles/home/aboutMe.module.scss
+++ b/styles/home/aboutMe.module.scss
@@ -14,9 +14,14 @@
 
 .heading {
   margin-bottom: 32px;
+  grid-column: 1 / span 8;
 
   .title_highlight {
     color: var(--color-support-primary);
+  }
+
+  @include for-tablet-up() {
+    grid-column: 1 / span 8;
   }
 }
 
