--- a/styles/home/works.module.scss
+++ b/styles/home/works.module.scss
@@ -86,6 +86,10 @@
       border-right: none;
     }
   }
+
+  @media only screen and (min-width: 1600px) {
+    width: 380px !important;
+  }
 }
 
 .swiper_navigation {
