--- a/src/styles/components/SocialLinks.module.scss
+++ b/src/styles/components/SocialLinks.module.scss
@@ -4,6 +4,26 @@
   gap: 0 16px
 }
 
+.typeHeader {
+  .socialItem {
+    background-color: rgba(41, 88, 255, 0.08);
+
+    svg path {
+      fill: var(--color-brand-primary);
+    }
+  }
+}
+
+.typeFooter {
+  .socialItem {
+    background-color: var(--color-brand-tertiary);
+
+    svg path {
+      fill: var(--color-neutral-black);
+    }
+  }
+}
+
 .socialItem {
   border-radius: 50%;
   width: 48px;
@@ -11,7 +31,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-brand-tertiary);
   transition: var(--transition-default);
 
   svg {
@@ -19,7 +38,6 @@
     height: 32px;
 
     path {
-      fill: var(--color-neutral-black);
       transition: var(--transition-default);
     }
   }
