--- a/src/styles/components/Header.module.scss
+++ b/src/styles/components/Header.module.scss
@@ -12,6 +12,28 @@
   }
 }
 
+.brandLabel {
+  display: none;
+
+  @include for-desktop-up() {
+    display: block;
+    font-family: var(--font-secondary);
+    font-size: 20px;
+    line-height: 160%;
+    font-weight: 700;
+    margin-left: 8px;
+    color: var(--color-brand-secondary);
+    transform: translateX(-50px);
+    opacity: 0;
+    will-change: transform;
+    transition: var(--transition-default);
+  }
+
+  .brandLabelHighlight {
+    color: var(--color-brand-primary);
+  }
+}
+
 .brand {
   grid-column: 1 / span 1;
   position: relative;
@@ -19,6 +41,7 @@
 
   a {
     display: flex;
+
     width: 56px;
     height: 56px;
 
@@ -26,10 +49,26 @@
       width: 56px;
       height: 56px;
     }
+
+    &:hover {
+      .brandLabel {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
   }
 
   @include for-desktop-up() {
-    width: 56px;
+    grid-column: 1 / span 3;
+    width: 100%;
+
+    a {
+      align-items: center;
+    }
+
+    a, a svg {
+      width: 100%;
+    }
   }
 }
 
@@ -38,7 +77,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    grid-column: 2 / span 12;
+    grid-column: 4 / span 12;
   }
 }
 
