--- a/src/styles/home/works.module.scss
+++ b/src/styles/home/works.module.scss
@@ -52,25 +52,30 @@
 
 .swiperMask {
   pointer-events: none;
+  display: none;
 
-  &::before, &::after {
-    content: '';
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    width: 100px;
-    height: 100%;
-    pointer-events: none;
-  }
+  @include for-tablet-up() {
+    display: block;
 
-  &::before {
-    left: 0;
-    background-image: linear-gradient(-270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
-  }
+    &::before, &::after {
+      content: '';
+      position: absolute;
+      z-index: 2;
+      top: 0;
+      width: 100px;
+      height: 100%;
+      pointer-events: none;
+    }
 
-  &::after {
-    right: 0;
-    background-image: linear-gradient(270deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+    &::before {
+      left: 0;
+      background-image: linear-gradient(-270deg, #000 0%, rgba(0, 0, 0, 0) 100%);
+    }
+
+    &::after {
+      right: 0;
+      background-image: linear-gradient(270deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+    }
   }
 
   @include for-desktop-up() {
@@ -80,12 +85,7 @@
 
 .swipperSlide {
   border: 1px solid rgba(#fff, 0.16);
-
-  @include for-tablet-up() {
-    &:not(:last-child) {
-      border-right: none;
-    }
-  }
+  border-right: none;
 
   @media only screen and (min-width: 1600px) {
     width: 380px !important;
