--- a/src/styles/home/aboutMe.module.scss
+++ b/src/styles/home/aboutMe.module.scss
@@ -6,48 +6,17 @@
   z-index: 3;
   overflow: initial;
 
-  &::before, &::after {
-    content: '';
-    position: absolute;
-    z-index: 3;
-    opacity: 0.32;
-    filter: blur(800px);
-  }
-
-  &::before {
-    width: 770px;
-    height: 770px;
-    background-color: var(--color-brand-primary);
-    top: -230px;
-    left: 165px;
-  }
-
-  &::after {
-    width: 840px;
-    height: 840px;
-    bottom: -72px;
-    right: 62px;
-    background-color: var(--color-brand-secondary);
-  }
-
   @include for-desktop-up() {
     padding: 116px 0;
-
-    &::before {
-      left: initial;
-      right: -50%;
-      transform: translateX(-50%);
-    }
-
-    &::after {
-      left: -524px;
-      right: initial;
-    }
   }
 }
 
 .grid {
   grid-template-rows: max-content 1fr;
+
+  @include for-desktop-up() {
+    grid-template-rows: auto;
+  }
 }
 
 .container {
@@ -88,6 +57,7 @@
 
   @include for-desktop-up() {
     grid-area: 1 / 1 / auto / span 6;
+    grid-row: 1;
   }
 }
 
@@ -101,6 +71,7 @@
 
   @include for-desktop-up() {
     grid-area: 1 / 6 / auto / span 12;
+    grid-row: 1;
     display: flex;
     align-items: center;
   }
