--- a/src/styles/home/hero.module.scss
+++ b/src/styles/home/hero.module.scss
@@ -1,5 +1,13 @@
 @import '../mixins';
 
+.section {
+  padding: 64px 0;
+
+  @include for-desktop-up() {
+    padding: 64px 0 116px;
+  }
+}
+
 .hero {
 
   .left {
