--- a/style.scss
+++ b/style.scss
@@ -152,6 +152,11 @@ h1 {
       }
 
       a {
+
+        svg {
+          width: 48px;
+        }
+
         &:hover {
           svg path {
             fill: $ui-support-2;
