--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,8 @@ $ui-light: #ffffff;
 $ui-support-1: #FFC226;
 $ui-support-2: #FF7272;
 
+$grey-1000: #040911;
+
 * {
   margin: 0;
   padding: 0;
@@ -13,8 +15,8 @@ $ui-support-2: #FF7272;
 }
 
 body {
-  background-color: $brand-primary;
-  font-family: 'Manrope', sans-serif;
+  background-color: $grey-1000;
+  font-family: 'Epilogue', sans-serif;
   font-size: 18px;
   font-weight: 500;
   color: $ui-light;
@@ -28,8 +30,13 @@ h1 {
   font-weight: 900;
 }
 
+.container {
+  width: 100%;
+  max-width: 80vw;
+}
+
 .mButton {
-  padding: 12px 16px;
+  padding: 16px 32px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -41,7 +48,7 @@ h1 {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: $ui-light;
+    background: $brand-primary;
     z-index: 0;
     will-change: transform;
     transition: .4s .06s cubic-bezier(.89,.08,.44,.97)
@@ -49,11 +56,12 @@ h1 {
 
   &__text {
     position: relative;
+    font-family: 'Karla', sans-serif;
     z-index: 1;
-    color: $brand-primary;
-    font-size: 14px;
-    line-height: 22px;
-    font-weight: 700;
+    color: $ui-light;
+    font-size: 18px;
+    line-height: 120%;
+    font-weight: 600;
     transition: .4s cubic-bezier(.89,.08,.44,.97);
   }
 
@@ -104,7 +112,7 @@ h1 {
     h1 {
       font-size: 40px;
       line-height: 44px;
-      font-weight: 900;
+      font-weight: 600;
     }
   }
 
@@ -112,6 +120,7 @@ h1 {
     padding-bottom: 8px;
 
     p {
+      font-family: 'Karla', sans-serif;
       opacity: .88;
       font-size: 18px;
       line-height: 32px;
@@ -131,10 +140,12 @@ h1 {
   &__heading {
     margin-bottom: 24px;
 
-    h5 {
-      font-weight: 700;
+    h2 {
+      font-family: 'Karla', sans-serif;
+      opacity: .88;
+      font-weight: 600;
       line-height: 24px;
-      color: $ui-support-1;
+      font-size: 18px;
     }
 
   }
@@ -145,13 +156,14 @@ h1 {
     flex-direction: row;
 
     li {
-      margin-right: 32px;
+      margin-right: max(24px, 0.8vw);
 
       a, a svg path {
         transition: .2s ease-in-out;
       }
 
       a {
+        display: flex;
 
         svg {
           width: 48px;
@@ -159,7 +171,7 @@ h1 {
 
         &:hover {
           svg path {
-            fill: $ui-support-2;
+            fill: $brand-primary;
           }
         }
       }
@@ -181,54 +193,112 @@ h1 {
 }
 
 @media screen and (min-width: 1024px) {
+  body {
+    font-size: max(18px, 0.9vw);
+    line-height: 200%;
+  }
 
   .mButton {
-    padding: 12px 24px;
 
     &__text {
-      position: relative;
-      z-index: 1;
-      color: $brand-primary;
-      font-size: 16px;
-      line-height: 24px;
-      font-weight: 700;
+      font-size: max(18px, 0.8vw);
     }
   }
 
-  .mHeader {
-    padding: 24px 0;
-  }
-
-  .mAboutMe {
-    &__image {
-      min-width: auto;
-      height: auto;
-      position: sticky;
-      top: 40px;
-    }
-  }
-}
-
-@media screen and (min-width: 1366px) {
   .mHeader {
     padding: 36px 0;
+    max-height: 122px;
+
+    &__brand {
+      a {
+        img {
+          width: max(32px, 2vw);
+          transition: ease-in-out 0.2s;
+        }
+
+        &:hover img {
+          transform: rotate(-45deg);
+        }
+      }
+    }
   }
 
+
   .mAboutMe {
-    margin-top: 40px;
-    margin-bottom: 56px;
+    margin-top: 4vh;
+    margin-bottom: 0;
+    max-height: max(calc(100vh - 122px - 8vh));
+    display: flex;
+
+    .container {
+      max-height: 100%;
+      display: flex;
+    }
+
+    .col {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
 
     &__image {
+      top: 0;
       min-width: 540px;
+      width: 92%;
+      height: 100%;
+      position: relative;
+      opacity: 0.96;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: -2px;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(90deg, #040911 0%, rgba(4, 9, 17, 0) 100%);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+      }
     }
 
     &__heading {
-      margin-bottom: 40px;
+      margin-bottom: 4.6vh;
 
       h1 {
-        font-size: 64px;
-        line-height: 68px;
+        font-size: max(64px, 3.4vw);
+        line-height: 120%;
       }
+    }
+
+    &__content {
+      margin-right: 8vw;
+
+      p {
+        font-size: max(20px, 1vw);
+        line-height: 200%;
+
+        &:not(:first-child) {
+          margin: max(32px, 1.8vw) 0;
+        }
+      }
+    }
+  }
+
+  .mSocial {
+    margin-bottom: 0;
+    margin-top: max(16px, 2.4vh);
+
+    &__heading {
+      margin-bottom: 2.2vh;
+
+      h2 {
+        font-size: max(18px, 0.9vw);
+      }
+    }
+
+    ul li a svg {
+      width: 2.4vw;
     }
   }
 }
